// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Breadcrumbs renders breadcrumbs when crumb prop passed in 1`] = `
<ul
  className="text-sm text-gray-5 mb-1 flex flex-wrap font-bold"
>
  <li
    className="mr-1"
  >
    Test
  </li>
</ul>
`;

exports[`components/Breadcrumbs renders multiple breadcrumbs 1`] = `
<ul
  className="text-sm text-gray-5 mb-1 flex flex-wrap font-bold"
>
  <li
    className="mr-1"
  >
    <a
      href="//test"
      onClick={[Function]}
    >
      Test
    </a>
  </li>
  <li
    className="mr-1"
  >
    /
  </li>
  <li
    className="mr-1"
  >
    Test 2
  </li>
</ul>
`;

exports[`components/Breadcrumbs renders null when no props 1`] = `null`;

exports[`components/Breadcrumbs renders without crashing 1`] = `null`;
